# peek-core-email

./: bamboo_ut.sh  publish.settings.sh  publish.sh  pyproject.toml  rename_plugin.sh  setup.py  sonar-project.properties
docs/: conf.py  watch-docs.sh
docs/api/: index_api.rst
docs/api_autodoc/peek_core_email/: peek_core_email.rst  peek_core_email.server.rst
docs/overview/: overview.rst
peek_core_email/: __init__.py  plugin_package.json
peek_core_email/_private/admin-app/: core-email-admin.component.html  core-email.module.ts
peek_core_email/_private/admin-app/setting-list/: admin-setting-list.component.ts
peek_core_email/_private/alembic/versions/: 297359a078eb_added_task_autodelete_time.py  36a9bc546606_fix_task_priorities.py  543ec701c9f7_added_ondialogconfirmpayload.py  da155db8b8f1_added_task_displaypriority.py  db5936c4d50d_initial_table_creation.py
peek_core_email/_private/server/: InboxApi.py  MainController.py  PluginLogicEntryHook.py  PluginServerEntryHook.py
peek_core_email/_private/storage/: Activity.py  DeclarativeBase.py  Task.py  TaskAction.py
peek_core_email/doc-admin/: index.rst
peek_core_email/plugin-module/: core-email-names.ts  core-email-root.service.ts  index.ts  package.json
peek_core_email/plugin-module/_private/: private-inbox-tuple-provider.service.ts
peek_core_email/plugin-module/tuples/: ActivityTuple.ts  TaskActionTuple.ts  TaskTuple.ts
